src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

/* Styling for Sticky Footer in Footer Component */
.footer {
  margin-top: 1rem;
  padding: 0.5rem;
  background-color: rgb(255, 255, 255);
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
}

.social_icons {
  height: 40px;
  margin: 5px;
}

/* Vertical and Horizontal Centering */
.centerFlex {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

